--- a/drivers/pci/host/Kconfig
+++ b/drivers/pci/host/Kconfig
@@ -1,11 +1,6 @@
 menu "PCI host controller drivers"
 	depends on PCI
 
-config PCIE_SNPSDEV
-	bool "Platform Driver for Synopsys Device"
-	select PCIEPORTBUS
-	select PCIE_DW
-
 config PCI_DRA7XX
 	bool "TI DRA7xx PCIe controller"
 	select PCIE_DW
@@ -19,6 +14,17 @@ config PCI_MVEBU
 	bool "Marvell EBU PCIe controller"
 	depends on ARCH_MVEBU || ARCH_DOVE
 	depends on OF
+
+config PCIE_DW_PLAT
+	bool "Platform bus based DesignWare PCIe Controller"
+	select PCIE_DW
+	---help---
+	 This selects the DesignWare PCIe controller support. Select this if
+	 you have a PCIe controller on Platform bus.
+
+	 If you have a controller with this interface, say Y or M here.
+
+	 If unsure, say N.
 
 config PCIE_DW
 	bool
